fixed line spacing in annotations on ie7 mantis:557
git-svn-id: http://svn.topazproject.org/svn/head@2463 48088309-b40f-0410-b149-b14953253675

--- a/plosone/webapp/src/main/webapp/css/pone_iepc.css
+++ b/plosone/webapp/src/main/webapp/css/pone_iepc.css
@@ -90,3 +90,5 @@ html>body #home { height: auto }
 *:first-child+html div.banner img,
 *:first-child+html div.banner object { margin-top: 8px; }
 
+*:first-child+html a.bug,
+*:first-child+html a:visited.bug, { margin-bottom: -20px!important; }
